--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
             <a href="http://www.youtube.com/user/starwars" target="_blank"><img class="socialicon" src="css/yt.png" alt="YouTube"></a>
         </div>
 
-        <a href="splash.html" id="official">Star Wars official</a>
+        <a href="index.html" id="official">Star Wars official</a>
         <a href="http://lucasfilm.com/" target="_blank"><img id="lucasicon" src="css/lucasfilm.jpg" alt="LucasFilm Ltd"></a>
         <a href="http://disney.co.uk/" target="_blank"><img id="disneyicon" src="css/disney.png" alt="Disney"></a>
     </div>
@@ -34,7 +34,7 @@
 
  	<div id="nav_bar">
  		<ul>
- 			<li><a href="splash.html" target="_blank">Splash</a></li><li><a href="index.html">News</a></li><li><a href="index.html">ForcePush</a></li><li id="nav_4"><a href="usage.html">API Usage</a></li>
+ 			<li><a href="index.html" target="_blank">Splash</a></li><li><a href="home.html">News</a></li><li><a href="home.html">ForcePush</a></li><li id="nav_4"><a href="usage.html">API Usage</a></li>
  		</ul>
  	</div>
 </div>
